Fix Gallery scrollbar on mobile viewport

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,9 +228,3 @@ a {
   text-align: center;
   font-weight: 400;
 }
-
-@media (max-width: 768px) {
-  .portofolio-wrapper {
-    overflow: scroll;
-  }
-}
